Added validation for keepAlive and autostart
The product validation now shows errors whenever one of the
aforementioned flags is set to true while its corresponding descriptor
is set to false.

Request: CT_BDEPLOY-476
Change-Id: Ib321f3faacd350c724d6ffa48d6b5557b0746aa7